[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_7q2nj"]
[ext_resource type="Texture2D" path="res://Assets/Art/bkpic/bk.png" id="bkpic_tex"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_7q2nj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="BkTex" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6
texture = ExtResource("bkpic_tex")

[node name="PlayerPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 80.0

[node name="Avatar" type="TextureRect" parent="PlayerPanel"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PlayerInfo" type="VBoxContainer" parent="PlayerPanel"]
layout_mode = 2

[node name="Nickname" type="Label" parent="PlayerPanel/PlayerInfo"]
layout_mode = 2
text = "新玩家"
theme_override_font_sizes/font_size = 16

[node name="Level" type="Label" parent="PlayerPanel/PlayerInfo"]
layout_mode = 2
text = "Lv.1"
theme_override_font_sizes/font_size = 12

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "主菜单"
theme_override_font_sizes/font_size = 28

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "开始游戏"
theme_override_font_sizes/font_size = 18

[node name="ArchiveButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "仓库 / 回忆"
theme_override_font_sizes/font_size = 16

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "设置"
theme_override_font_sizes/font_size = 16

[node name="BackToTitleButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "返回标题"
theme_override_font_sizes/font_size = 16

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "退出到桌面"
theme_override_font_sizes/font_size = 16


